src/objects/ITOP_Request_Primary_Option__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>&apos;What about &apos; +  Name  + &apos; do you need help with?&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <label>ITOP Request Primary Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ITOP Request Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITOP Request Primary Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>